BlackCAFE: ctk: rename GTK -> CTK

--- a/desktop-themes/BlackCAFE/ctk-3.0/cafe-applications.css
+++ b/desktop-themes/BlackCAFE/ctk-3.0/cafe-applications.css
@@ -591,7 +591,7 @@ CafePanelApplet > menubar {
 	padding-right: 4px;
 }
 
-/*WnckPager is unnamed in GTK inspector so try this*/
+/*WnckPager is unnamed in CTK inspector so try this*/
 PanelApplet.wnck-applet .wnck-pager {
     background-image: none;
     border-color: transparent;
