Blue-Undersea: ctk: rename GTK -> CTK

--- a/desktop-themes/Blue-Undersea/ctk-3.0/ctk-widgets.css
+++ b/desktop-themes/Blue-Undersea/ctk-3.0/ctk-widgets.css
@@ -6266,7 +6266,7 @@ headerbar paned > separator {
     border-radius: 0;
 }
 
-/* this is the default titlebar that is added by GTK
+/* this is the default titlebar that is added by CTK
  * when client-side decorations are in use and the application
  * did not set a custom titlebar.
  */
